[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Props/Scripts/Box.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=2]
rough = true

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.5, 10 )

[node name="Box" type="RigidBody2D"]
collision_layer = 64
collision_mask = 71
mass = 100.0
physics_material_override = SubResource( 2 )
gravity_scale = 3.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1, 1 )
scale = Vector2( 0.390625, 0.390625 )
texture = ExtResource( 1 )

[node name="BulletDetector" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
position = Vector2( -1.5, 0 )
shape = SubResource( 3 )

[node name="MarkedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Box_body_entered"]
[connection signal="area_entered" from="BulletDetector" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="MarkedTimer" to="." method="_on_MarkedTimer_timeout"]
